--- a/css/main.css
+++ b/css/main.css
@@ -27,3 +27,9 @@ ol,
 li {
   list-style: none;
 }
+
+[class*="__container-small"] {
+  max-width: 1330px;
+  padding: 0 10px;
+  margin: 0 auto;
+}
