--- a/css/media.css
+++ b/css/media.css
@@ -1,8 +1,8 @@
 @media (max-width: 1024px) {
-  .ready__content,
+  /* .ready__content,
   .ready__image {
     width: 50%;
-  }
+  } */
 
   .cicd__content,
   .cicd__image {
@@ -15,20 +15,6 @@
 }
 
 @media (max-width: 768px) {
-  .ready__title {
-    font-size: 70px;
-  }
-
-  .ready__text {
-    font-size: 19px;
-  }
-
-  .ready__subtitle {
-    margin-top: 100px;
-    font-size: 40px;
-    padding-bottom: 0;
-  }
-
   .cicd__container-small {
     margin-top: 100px;
     margin-bottom: 100px;
