--- a/css/ready.css
+++ b/css/ready.css
@@ -1,15 +1,11 @@
-[class*="__container-small"] {
-  max-width: 1330px;
-  padding: 0 10px;
-  margin: 0 auto;
+.ready__container-small {
+  padding-top: 52px;
 }
 
-.ready__container-small {
+.ready__body {
   display: flex;
-  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
-  padding-top: 52px;
 }
 
 .ready__content {
@@ -39,19 +35,21 @@
 }
 
 .block-content__button a {
+  text-align: center;
   display: inline-block;
-  line-height: 1.2;
   font-size: 18px;
   font-weight: 700;
   color: #12100c;
-  padding: 12px 46px;
+  padding: 12px 10px;
+  min-width: 160px;
   background-color: #ffae33;
   border-radius: 16px;
+
+  transition: all 0.3s;
 }
 .block-content__button a:hover {
   color: #ffae33;
   background-color: #12100c;
-  transition: all 0.3s;
 }
 
 block-content__text {
@@ -68,7 +66,7 @@ block-content__text {
 }
 
 .ready__image {
-  max-width: 700px;
+  flex: 0 1 630px;
   height: 100%;
 }
 
@@ -94,4 +92,93 @@ block-content__text {
   color: #999795;
   font-weight: 400;
   text-decoration-line: line-through;
+}
+
+@media (max-width: 768px) {
+  .ready__body {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .ready__content {
+    width: 100%;
+    text-align: center;
+  }
+
+  .ready__block-content {
+    justify-content: center;
+  }
+
+  .ready__title {
+    font-size: 70px;
+  }
+
+  .ready__text {
+    font-size: 19px;
+  }
+
+  .ready__subtitle {
+    margin-top: 100px;
+    font-size: 40px;
+    padding-bottom: 0;
+  }
+
+  .ready__icons {
+    margin-bottom: 30px;
+  }
+}
+
+@media (max-width: 425px) {
+  .ready__content {
+    width: 100%;
+    text-align: center;
+  }
+
+  .ready__title {
+    font-size: 50px;
+  }
+
+  .ready__text {
+    font-size: 16px;
+  }
+
+  .block-content__text {
+    font-size: 12px;
+  }
+
+  .ready__block-content {
+    justify-content: space-between;
+  }
+
+  .ready__image {
+    width: 100%;
+    margin-top: 30px;
+  }
+
+  .ready__subtitle {
+    font-size: 30px;
+  }
+
+  .block-content__button a {
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 320px) {
+  .ready__block-content {
+    flex-direction: column;
+  }
+
+  .ready__text {
+    margin-bottom: 30px;
+  }
+
+  .block-content__button {
+    margin: 0;
+    margin-bottom: 10px;
+  }
+
+  .block-content__button a {
+    font-size: 14px;
+  }
 }
