--- a/css/cicd.css
+++ b/css/cicd.css
@@ -1,3 +1,9 @@
+[class*="__container-small"] {
+  max-width: 1330px;
+  padding: 0 10px;
+  margin: 0 auto;
+}
+
 .cicd__container-small {
   display: flex;
   justify-content: space-between;
@@ -6,7 +12,11 @@
 }
 
 .cicd__content {
+  flex: 0 1 650px;
   max-width: 650px;
+
+  display: flex;
+  flex-direction: column;
 }
 
 .cicd__title {
@@ -20,12 +30,13 @@
   font-size: 24px;
   line-height: 1.3;
   margin-top: 10px;
+  margin-bottom: 20px;
   padding-right: 20px;
 }
 
 .cicd__buttons {
+  margin-top: auto;
   display: flex;
-  margin-top: 155px;
 }
 
 .cicd__button {
@@ -38,13 +49,13 @@
   background-color: #ffae33;
   border-radius: 10.5px;
   margin-right: 16px;
+  transition: all 0.3s;
+  cursor: pointer;
 }
 
 .cicd__button:hover {
   color: #ffae33;
   background-color: #12100c;
-  transition: all 0.3s;
-  cursor: pointer;
 }
 
 .button-pink {
@@ -57,13 +68,64 @@
 }
 
 .cicd__image {
+  /* flex: 0 1 auto; */
   max-width: 590px;
   height: auto;
 }
 .cicd__image img {
+  display: block;
   width: 100%;
-  height: 100%;
+  height: auto;
   object-fit: cover;
 
   border-radius: 25px;
+}
+
+@media (max-width: 768px) {
+  .cicd__container-small {
+    margin-top: 100px;
+    margin-bottom: 100px;
+    flex-wrap: wrap;
+    text-align: center;
+    justify-content: center;
+  }
+
+  .cicd__text {
+    font-size: 19px;
+  }
+
+  .cicd__button {
+    margin: 0;
+  }
+
+  .cicd__buttons {
+    margin: 20px 0;
+    justify-content: space-between;
+  }
+}
+
+@media (max-width: 425px) {
+  /* .cicd__content {
+    width: 100%;
+  } */
+
+  .cicd__title {
+    font-size: 30px;
+    /* text-align: center; */
+  }
+
+  .cicd__text {
+    /* text-align: justify; */
+    font-size: 16px;
+  }
+
+  .cicd__buttons {
+    /* margin-top: 50px; */
+    justify-content: space-between;
+  }
+
+  .cicd__image {
+    /* margin-top: 30px; */
+    width: 100%;
+  }
 }
