--- a/css/main.css
+++ b/css/main.css
@@ -33,3 +33,15 @@ li {
   padding: 0 10px;
   margin: 0 auto;
 } */
+
+@media (max-width: 768px) {
+  .title {
+    font-size: 49px;
+  }
+}
+
+@media (max-width: 425px) {
+  .title {
+    font-size: 40px;
+  }
+}
